methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:67: error: expected class or object definition
def colorieCase(){
^PictureMono2:72: error: Unmatched closing brace '}' ignored here
}
^