methods.picture.PictureMono2.scala.code
override def run() {
}


def dessineMotifV(){
  colorieCase()
  gauche()
  avance()
  droite()
  avance()
  colorieCase()
  avance()
  droite()
  avance()
  colorieCase()
  
}
/**
*place la buglle pour le dessin
*
*ne marche que sur ligne droite
*/
def tourPourV(){
  for (i <- 1 to 2){
  gauche()
  for(j <- 1 to 4)
  avance()
  }
}
/** 
* place buggle debut et fin des V
*/
def debutFin(){
  for( i <- 1 to 2){
    avance()
  }
}

/**
* fait passer les coins pour les v
*/
def coin(){
  
}


 DebutFin()
  for (i <- 1 to 4){
    Dessiner()
    if(i <= 3){
      faireV()
    } else{
      gauche()
      DebutFin()
      gauche()
    }
  }
  
}




/**
* colorie uniquement la case ou se trouve le buggle
*/
def colorieCase(){
  baisseBrosse()
  leveBrosse()
}